"""This is a Bazel module file."""

# https://registry.bazel.build/modules/glog
bazel_dep(name = "glog", version = "0.7.0", repo_name = "com_github_google_glog")

# https://registry.bazel.build/modules/catch2
bazel_dep(name = "catch2", version = "3.5.2")

# https://registry.bazel.build/modules/gflags
bazel_dep(name = "gflags", version = "2.2.2",repo_name="com_github_gflags_gflags")

# https://registry.bazel.build/modules/abseil-cpp
bazel_dep(name = "abseil-cpp", version = "20230802.1", repo_name = "com_google_absl")

# https://registry.bazel.build/modules/grpc
bazel_dep(name = "grpc", version = "1.56.3", repo_name = "com_github_grpc_grpc")

# https://registry.bazel.build/modules/rules_go
bazel_dep(name = "rules_go", version = "0.46.0", repo_name = "io_bazel_rules_go")

# https://registry.bazel.build/modules/protobuf
bazel_dep(name = "protobuf", version = "23.1", repo_name = "com_google_protobuf")