[package]
name = "hello_grpc_rust"
version = "0.1.0"
authors = ["feuyeux <feuyeux@gmail.com>"]
edition = "2021"

[[bin]]
name = "proto-server"
path = "src/landing/server.rs"

[[bin]]
name = "proto-client"
path = "src/landing/client.rs"

[dependencies]
#grpc https://lib.rs/crates/tonic
tonic = { version = "0.13.0", features = ["tls"] }
#gRPC Codec https://lib.rs/crates/prost
prost = "0.13.3"
# https://lib.rs/crates/tokio
tokio = { version = "1.40.0", features = [
    "rt-multi-thread",
    "time",
    "fs",
    "macros",
    "net",
] }
#https://lib.rs/crates/tokio-stream
tokio-stream = { version = "0.1.16", features = ["net"] }
#https://lib.rs/crates/async-stream
async-stream = "0.3.5"
#https://lib.rs/crates/futures
futures = { version = "0.3.30", default-features = false, features = ["alloc"] }
#json https://lib.rs/crates/serde
serde = { version = "1.0.210", features = ["derive"] }
#https://lib.rs/crates/serde_json
serde_json = "1.0.128"
#https://lib.rs/crates/rand
rand = "0.9.0"
#https://lib.rs/crates/chrono
chrono = "0.4.38"
#https://lib.rs/crates/uuid
uuid = { version = "1.10.0", features = ["serde", "v4"] }
#log https://lib.rs/crates/log
log = "0.4.22"
#log impl https://lib.rs/crates/log4rs
log4rs = "1.3.0"
#static https://crates.io/crates/once_cell
once_cell = "1.20.1"

[build-dependencies]
#https://lib.rs/crates/tonic-build
tonic-build = "0.13.0"
