[package]
name = "hello_grpc_rust"
version = "0.1.0"
authors = ["feuyeux <feuyeux@gmail.com>"]
edition = "2021"

[[bin]]
name = "proto-server"
path = "src/landing/server.rs"

[[bin]]
name = "proto-client"
path = "src/landing/client.rs"

[dependencies]
# grpc https://lib.rs/crates/tonic
tonic = { version = "0.14.2", features = ["tls"] }
# gRPC Codec https://lib.rs/crates/prost
prost = "0.11.9"
# https://lib.rs/crates/tokio
tokio = { version = "1.32.0", features = [
    "rt-multi-thread",
    "time",
    "fs",
    "macros",
    "net",
    "signal",
] }
# https://lib.rs/crates/tokio-stream
tokio-stream = { version = "0.1.14", features = ["net"] }
# https://lib.rs/crates/async-stream
async-stream = "0.3.5"
# https://lib.rs/crates/futures
futures = { version = "0.3.28", default-features = false, features = ["alloc"] }
# json https://lib.rs/crates/serde
serde = { version = "1.0.188", features = ["derive"] }
# https://lib.rs/crates/serde_json
serde_json = "1.0.107"
# https://lib.rs/crates/rand
rand = "0.9.2"
# https://lib.rs/crates/chrono
chrono = "0.4.31"
# https://lib.rs/crates/uuid
uuid = { version = "1.4.1", features = ["serde", "v4"] }
# log https://lib.rs/crates/log
log = "0.4.20"
# log impl https://lib.rs/crates/log4rs
log4rs = { version = "1.2.0", features = ["gzip"] }
# static https://crates.io/crates/once_cell
once_cell = "1.18.0"
# HTTP https://crates.io/crates/hyper
hyper = { version = "0.14.27", features = ["full"] }

[build-dependencies]
# https://lib.rs/crates/tonic-build
tonic-build = "0.9.2"
