[package]
name = "hello_grpc_rust"
version = "0.1.0"
authors = ["feuyeux <feuyeux@gmail.com>"]
edition = "2024"

[[bin]]
name = "proto-server"
path = "src/landing/server.rs"

[[bin]]
name = "proto-client"
path = "src/landing/client.rs"

[dependencies]
# grpc https://lib.rs/crates/tonic
tonic = { version = "0.14.2", features = ["transport", "tls-webpki-roots"] }
# gRPC Codec https://lib.rs/crates/prost
prost = "0.14.1"
# tonic-prost codec
tonic-prost = "0.14.2"
# https://lib.rs/crates/tokio
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "time",
    "fs",
    "macros",
    "net",
    "signal",
] }
# https://lib.rs/crates/tokio-stream
tokio-stream = { version = "0.1.17", features = ["net"] }
# https://lib.rs/crates/async-stream
async-stream = "0.3.6"
# https://lib.rs/crates/futures
futures = { version = "0.3.31", default-features = false, features = ["alloc"] }
# json https://lib.rs/crates/serde
serde = { version = "1.0.217", features = ["derive"] }
# https://lib.rs/crates/serde_json
serde_json = "1.0.135"
# https://lib.rs/crates/rand
rand = "0.10.0"
# https://lib.rs/crates/chrono
chrono = "0.4.39"
# https://lib.rs/crates/uuid
uuid = { version = "1.11.0", features = ["serde", "v4"] }
# log https://lib.rs/crates/log
log = "0.4.22"
# log impl https://lib.rs/crates/log4rs
log4rs = { version = "1.3.0", features = ["gzip"] }
# static https://crates.io/crates/once_cell
once_cell = "1.20.2"
# HTTP https://crates.io/crates/hyper
hyper = { version = "1.5.2", features = ["full"] }
# hyper-util for hyper 1.x compatibility
hyper-util = { version = "0.1", features = ["full"] }
# tracing https://lib.rs/crates/tracing
tracing = "0.1"
# tracing subscriber https://lib.rs/crates/tracing-subscriber
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# rustls with ring crypto provider for TLS
rustls = { version = "0.23", features = ["ring"] }

[build-dependencies]
# https://lib.rs/crates/tonic-prost-build
tonic-prost-build = "0.14.2"
