[package]
name = "hello_grpc_rust"
version = "0.1.0"
authors = ["feuyeux <feuyeux@gmail.com>"]
edition = "2021"

[[bin]]
name = "proto-server"
path = "src/landing/server.rs"

[[bin]]
name = "proto-client"
path = "src/landing/client.rs"


[dependencies]
#grpc
tonic = { version = "0.8.3", features = ["tls"] }
#gRPC Codec
prost = "0.11.6"
tokio = { version = "1.25.0", features = ["rt-multi-thread", "time", "fs", "macros", "net"] }
tokio-stream = { version = "0.1.11", features = ["net"] }
async-stream = "0.3.3"
futures = { version = "0.3.18", default-features = false, features = ["alloc"] }
#json
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
rand = "0.8.5"
chrono = "0.4.23"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
#log
log = "0.4.17"
#log impl
log4rs = "1.2.0"

[build-dependencies]
tonic-build = "0.8.4"