package(default_visibility = ["//visibility:public"])

cc_test(
    name = "hello_test",
    srcs = ["hello_test.cpp"],
    copts = ["-std=c++17"],
    deps = [
        "//common:hello_utils",
        "//common:hello_conn",
        "//protos:hello_cc_grpc",
        "@catch2",
        "@com_github_google_glog//:glog",
        "@com_github_grpc_grpc//:grpc++",
    ],
    includes = [
        "../common",
    ],
)